Changed team photos and updated date

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <hr/>
                 <div class="faq-post">
                     <h2>What is <span class="span-capital">HackTheMidlands?</span></h2>
-                    <p>  HackTheMidlands is a 24-hour, inclusive hackathon being hosted in Birmingham on the 1st-2nd October 2016 at Millennium Point. </p>
+                    <p>  HackTheMidlands is a 24-hour, inclusive hackathon being hosted in Birmingham on the 23rd-24th September 2017 at Millennium Point. </p>
                     <p> Over the 24 hours, people aged 14+ of all skill levels <b>(you don't have to be a professional or a student! Just be lovely, passionate and interested in tech!)</b> will come together to share ideas, and create new and awesome projects! (Not sure what a hackathon is? MLH have a great explanation <a href="https://mlh.io/college-administrator-hackathon-guide">here</a>). </p>
                 </div>
                 <div class="faq-post">
