--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
-            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-tickets-27322918585">Tickets</a>
-            <a href="event-info.html">Event Information</a>
+            <a href="http://eepurl.com/cIZiFf">Pre-Register</a>
+            <!--<a href="event-info.html">Event Information</a>-->
         </div>
       </div>
 
@@ -61,17 +61,17 @@
                             <a href="#event-info">About Us</a>
                             <a href="#sponsors">Sponsors</a>
                             <a href="#team">Team</a>
-                            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-tickets-27322918585">Tickets</a>
-                            <a href="event-info.html">Event Information</a>
+                            <a href="http://eepurl.com/cIZiFf">Pre-Register</a>
+                            <!--<a href="event-info.html">Event Information</a>-->
                             <div class="nav-mobile"></div>
                         </div>
                     </div>
                 </div>
             <div class="header-content">
-                <h1>Are you ready to <br/><span>HackTheMidlands?</span></h1>
+                <h1>Are you ready to <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands?</span></span></h1>
                 <h3>23<sup>rd</sup> - 24<sup>th</sup> September</h3>
                 <a href="http://eepurl.com/cIZiFf"><button id="apply-button">Register Interest</button></a>
-                <a href="mailto:Hackthemidlands@gmail.com"><button id="sponsor-buttom">Sponsor Us</button></a>
+                <a href="mailto:Hackthemidlands@gmail.com"><button id="sponsor-button">Sponsor Us</button></a>
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
             <div class="social-links-header">
@@ -95,7 +95,7 @@
                 <h1>FAQ</h1>
                 <hr/>
                 <div class="faq-post">
-                    <h2>What is <span class="span-capital">HackTheMidlands?</span></h2>
+                    <h2>What is <span class="span-capital">HackThe<span>Midlands?</span></span></h2>
                     <p>  HackTheMidlands is a 24-hour, inclusive hackathon being hosted in Birmingham on the 23rd-24th September 2017 at Millennium Point. </p>
                     <p> Over the 24 hours, people aged 14+ of all skill levels <b>(you don't have to be a professional or a student! Just be lovely, passionate and interested in tech!)</b> will come together to share ideas, and create new and awesome projects! (Not sure what a hackathon is? MLH have a great explanation <a href="https://mlh.io/college-administrator-hackathon-guide">here</a>). </p>
                 </div>
@@ -183,29 +183,37 @@
         </section>
         <section id="team">
             <div class="container team-container">
-                <h2>Meet the team</h2>
-                <hr/>
-                <h3>Without a team of dedicated volunteers this hackathon simply would not happen. Here's your chance to meet the awesome people who are behind <span class="span-capital">hackTheMidlands</span></h3>
+                <div class="team-container__header">
+                    <h2>Meet the team</h2>
+                    <hr/>
+                    <h3>Without a team of dedicated volunteers this hackathon simply would not happen. Here's your chance to meet the awesome people who are behind <span class="span-capital">hackTheMidlands</span></h3>
+                </div>
                 <div class="team-grid-container">
-                    <div class="team-grid">
-                        <div class="team-member">
-                            <div class="team-member-picture" id="t2"></div>
-                            <h3>Tom</h3>
-                            <h5>UoB Computer Science Society President</h5>
+                    <div class="team-grid team-member">
+                        <div class="team-member__picture" id="t2"></div>
+                        <div class="team-member__text">
+                            <div class="team-member__text__content">
+                                <h3>Tom</h3>
+                                <h5>UoB Computer Science Society President</h5>
+                            </div>
                         </div>
                     </div>
-                    <div class="team-grid">
-                        <div class="team-member">
-                            <div class="team-member-picture" id="t5"></div>
-                            <h3>Alex Wiley</h3>
-                            <h5>BCU Computer Science Society Web Dev</h5>
+                    <div class="team-grid team-member">
+                        <div class="team-member__picture" id="t5"></div>
+                        <div class="team-member__text">
+                            <div class="team-member__text__content">
+                                <h3>Alex Wiley</h3>
+                                <h5>BCU Computer Science Society Web Dev</h5>
+                            </div>
                         </div>
                     </div>
-                    <div class="team-grid">
-                        <div class="team-member">
-                            <div class="team-member-picture" id="t7"></div>
-                            <h3>Liam</h3>
-                            <h5>Microsoft Student Partner</h5>
+                    <div class="team-grid team-member">
+                        <div class="team-member__picture" id="t7"></div>
+                        <div class="team-member__text">
+                            <div class="team-member__text__content">
+                                <h3>Liam</h3>
+                                <h5>Microsoft Student Partner</h5>
+                            </div>
                         </div>
                     </div>
 
