--- a/event-info.html
+++ b/event-info.html
@@ -10,13 +10,13 @@
     <script src="https://use.typekit.net/dme1ptj.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="./style/js/featherlight.js"></script>
+    <script src="js/featherlight.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/featherlight/1.5.0/featherlight.min.css" type="text/css" rel="stylesheet"/>
 
     <!--Timetable-->
     <link rel="stylesheet" href="./style/css/timetablejs.css">
 
-    <script src="./style/js/timetable.min.js"></script>
+    <script src="js/timetable.min.js"></script>
 </head>
 
 <body>
