--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://use.typekit.net/dme1ptj.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"></script>
+        <script src="./js/clock.js"></script>
         <style>
             #event-info a {
                 color: #fff;
@@ -83,9 +83,27 @@
             <div class="container">
                 <img src="./images/confetti.png"/>
                 <h3>HackTheMidlands <br/><span>Will start in:</span></h3>
-                <div class="countdown">
-                    <div id="countdown"></div>
-                    <h2>Days Hours Minutes Seconds</h2>
+                <!--<div class="countdown">-->
+                    <!--<div id="countdown"></div>-->
+                    <!--<h2>Days Hours Minutes Seconds</h2>-->
+                <!--</div>-->
+                <div id="countdown">
+                    <div>
+                        <span class="days"></span>
+                        <div class="smalltext">Days</div>
+                    </div>
+                    <div>
+                        <span class="hours"></span>
+                        <div class="smalltext">Hours</div>
+                    </div>
+                    <div>
+                        <span class="minutes"></span>
+                        <div class="smalltext">Minutes</div>
+                    </div>
+                    <div>
+                        <span class="seconds"></span>
+                        <div class="smalltext">Seconds</div>
+                    </div>
                 </div>
             </div>
             <div id="faq-slit-top"></div>
@@ -233,14 +251,7 @@
                 <a target="_blank" href="http://eepurl.com/cIZiFf"><img src="images/event-brite.png"/></a>
             </div>
         </footer>
-        <script type="text/javascript">
-            $("#countdown")
-                .countdown("2017/09/23", function(event) {
-                    $(this).text(
-                            event.strftime('%D %H:%M:%S')
-                    );
-                });
-        </script>
+
     <script>
         $(function() {
             $('a[href*="#"]:not([href="#"])').click(function() {
