added partners | monzo and cycle

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 <h2>Our Sponsors</h2>
                 <hr/>
                 <!--<h3>Without the help of our sponsors HackTheMidlands simply would not be possible. Alongside helping sponsor this hackathon, our sponsors have a vast range of experience and are a valuable asset to network with.</h3>-->
-                <h3>We will be releasing a list of sponsors very soon! If you are interested in becoming a sponsor for HackTheMidlands 2017 then please register your interest below!</h3>
-                <!--<div class="sponsors-list">-->
+                <h3>We will be releasing more sponsors as we get closer to the event! If you are interested in becoming a sponsor for HackTheMidlands 2017 then please register your interest below!</h3>
+                <div class="sponsors-list">
                     <!--<div class="gold">-->
                         <!--<img class="cat-icon" src="./images/gold-medal.svg"/>-->
                         <!--<h2>Gold Sponsors</h2>-->
@@ -168,32 +168,17 @@
                         <!--<h2>Bronze Sponsors</h2>-->
                         <!--<h3>More coming soon!</h3>-->
                     <!--</div>-->
-                    <!--<div class="partner">-->
-                        <!--<img class="cat-icon" src="./images/deal.svg"/>-->
-                        <!--<h2>Partners</h2>-->
-                        <!--<div class="sponsor-icons">-->
-                            <!--<a href="//bostonteaparty.co.uk/"><img src="./images/sponsors/btp.png"/></a>-->
-                        <!--</div>-->
-                        <!--<div class="sponsor-icons">-->
-                            <!--<a href="//vanti.co.uk"><img src="images/sponsors/vanti.png"/></a>-->
-                        <!--</div>-->
-                        <!--<div class="sponsor-icons">-->
-                            <!--<a href="//stickermule.com/"><img src="./images/sponsors/stickermule.png"/></a>-->
-                        <!--</div>-->
-                        <!--<div class="sponsor-icons">-->
-                            <!--<a href="//hackcampus.io/"><img src="./images/sponsors/hackcampus.png"/></a>-->
-                        <!--</div>-->
-                        <!--<div class="sponsor-icons">-->
-                            <!--<a href="//estimote.com"><img src="./images/sponsors/estimote.png"/></a>-->
-                        <!--</div>-->
-                        <!--<div class="sponsor-icons">-->
-                            <!--<a href="//comptia.org"><img src="./images/sponsors/comptia.png"/></a>-->
-                        <!--</div>-->
-                        <!--<div class="sponsor-icons">-->
-                            <!--<a href="//clarifai.com"><img src="./images/sponsors/clarifai.png"/></a>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
+                    <div class="partner">
+                        <img class="cat-icon" src="./images/deal.svg"/>
+                        <h2>Partners</h2>
+                        <div class="sponsor-icons">
+                            <a href="//monzo.com"><img src="./images/sponsors/monzo.png"/></a>
+                        </div>
+                        <div class="sponsor-icons">
+                            <a href="//cycle.io"><img src="./images/sponsors/cycle.svg"/></a>
+                        </div>
+                    </div>
+                </div>
                 <a href="mailto:Hackthemidlands@gmail.com"><button>Become A Sponsor!</button></a>
             </div>
             <div id="sponsor-slit-top"></div>
