--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h1>Are you ready to <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands?</span></span></h1>
                 <h3>23<sup>rd</sup> - 24<sup>th</sup> September</h3>
                 <a href="http://eepurl.com/cIZiFf"><button id="apply-button">Register Interest</button></a>
-                <a href="mailto:Hackthemidlands@gmail.com"><button id="sponsor-button">Sponsor Us</button></a>
+                <a href="sponsorship.pdf"><button id="sponsor-button">Sponsor Us</button></a>
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
             <div class="social-links-header">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="mailto:Hackthemidlands@gmail.com"><button>Become A Sponsor!</button></a>
+                <a href="sponsorship.pdf"><button>Become A Sponsor!</button></a>
             </div>
             <div id="sponsor-slit-top"></div>
         </section>
