--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link type="text/css" rel="stylesheet" href="./style/css/main.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:title" content="24 Hour Hackathon in Birmingham" />
-        <meta property="og:description" content="HackTheMidlands is a 24 hour hackathon based at Millenium Point in Birmingham. With over 200 students, this is not an event to miss!" />
+        <meta property="og:description" content="HackTheMidlands is a 24 hour hackathon based at Millenium Point in Birmingham. With over 200 attendees, this is not an event you will want to miss!" />
         <meta property="og:image" content="http://hackthemidlands.com/images/hackthemidlands-facebook.jpg" />
         <meta property="og:url" content="http://www.hackthemidlands.com" />
 
