--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="24 Hour Hackathon in Birmingham" />
         <meta property="og:description" content="HackTheMidlands is a 24 hour hackathon based at Millenium Point in Birmingham. With over 200 attendees, this is not an event you will want to miss!" />
         <meta property="og:image" content="http://hackthemidlands.com/images/hackthemidlands-facebook.jpg" />
-        <meta property="og:url" content="http://www.hackthemidlands.com" />
+        <meta property="og:url" content="http://www.hackthemidlands.co.uk" />
 
         <script src="https://use.typekit.net/dme1ptj.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
