--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                         <div class="team-member__picture" id="t2"></div>
                         <div class="team-member__text">
                             <div class="team-member__text__content">
-                                <h3>Tom</h3>
-                                <h5>UoB Computer Science Society President</h5>
+                                <h3>Tom Goodman</h3>
+                                <h5>Lead Organiser</h5>
                             </div>
                         </div>
                     </div>
@@ -215,8 +215,8 @@
                         <div class="team-member__picture" id="t7"></div>
                         <div class="team-member__text">
                             <div class="team-member__text__content">
-                                <h3>Liam</h3>
-                                <h5>Microsoft Student Partner</h5>
+                                <h3>Liam Sorta</h3>
+                                <h5>Game Dev Network Founder</h5>
                             </div>
                         </div>
                     </div>
