added new sponsors

--- a/index.html
+++ b/index.html
@@ -155,16 +155,16 @@
                             <!--<a href="//bcs.org/"><img id="bcs" src="./images/sponsors/bcs.png"/></a>-->
                         <!--</div>-->
                     <!--</div>-->
-                    <!--<div class="silver">-->
+                    <div class="silver">
                         <!--<img class="cat-icon" src="./images/silver-medal.svg"/>-->
-                        <!--<h2>Silver Sponsors</h2>-->
+                        <h2>Silver Sponsors</h2>
                         <!--<div class="sponsor-icons" style="width: 40%">-->
                             <!--<a href="//majestic.com/"><img src="./images/sponsors/majestic.png"/></a>-->
                         <!--</div>-->
-                        <!--<div class="sponsor-icons" style="width: 40%">-->
-                            <!--<a href="//codio.com/"><img src="./images/sponsors/codio.png"/></a>-->
-                        <!--</div>-->
-                    <!--</div>-->
+                        <div class="sponsor-icons" style="width: 40%">
+                            <a href="//elifesciences.org"><img src="./images/sponsors/elife.png"/></a>
+                        </div>
+                    </div>
                     <!--<div class="bronze">-->
                         <!--<img class="cat-icon" src="./images/bronze-medal.svg"/>-->
                         <!--<h2>Bronze Sponsors</h2>-->
@@ -178,6 +178,12 @@
                         </div>
                         <div class="sponsor-icons">
                             <a href="//cycle.io"><img src="./images/sponsors/cycle.svg"/></a>
+                        </div>
+						<div class="sponsor-icons">
+                            <a href="//bostonteaparty.co.uk/"><img src="./images/sponsors/btp.png"/></a>
+                        </div>
+						<div class="sponsor-icons">
+                            <a href="//cs.bham.ac.uk"><img src="./images/sponsors/socs.png"/></a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +204,7 @@
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Tom</h3>
-                                <h5>UoB Computer Science Society President</h5>
+                                <h5>Lead Organiser</h5>
                             </div>
                         </div>
                     </div>
@@ -216,7 +222,7 @@
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Liam</h3>
-                                <h5>Microsoft Student Partner</h5>
+                                <h5>Founder, Game Dev Network</h5>
                             </div>
                         </div>
                     </div>
