added algolia & jetbrains - TOOD: make them the right size pls @AlexWileyy ;-;

--- a/index.html
+++ b/index.html
@@ -161,8 +161,11 @@
                         <!--<div class="sponsor-icons" style="width: 40%">-->
                             <!--<a href="//majestic.com/"><img src="./images/sponsors/majestic.png"/></a>-->
                         <!--</div>-->
-                        <div class="sponsor-icons" style="width: 40%">
+                        <div class="sponsor-icons">
                             <a href="//elifesciences.org"><img src="./images/sponsors/elife.png"/></a>
+                        </div>
+                        <div class="sponsor-icons">
+                            <a href="//algolia.com"><img src="./images/sponsors/algolia.svg"/></a>
                         </div>
                     </div>
                     <!--<div class="bronze">-->
@@ -179,11 +182,14 @@
                         <div class="sponsor-icons">
                             <a href="//cycle.io"><img src="./images/sponsors/cycle.svg"/></a>
                         </div>
-						<div class="sponsor-icons">
+			<div class="sponsor-icons">
                             <a href="//bostonteaparty.co.uk/"><img src="./images/sponsors/btp.png"/></a>
                         </div>
-						<div class="sponsor-icons">
+			<div class="sponsor-icons">
                             <a href="//cs.bham.ac.uk"><img src="./images/sponsors/socs.png"/></a>
+                        </div>
+                        <div class="sponsor-icons">
+                            <a href="//jetbrains.com"><img src="./images/sponsors/jetbrains.png"/></a>
                         </div>
                     </div>
                 </div>
