--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
                 <!--<h3>Without the help of our sponsors HackTheMidlands simply would not be possible. Alongside helping sponsor this hackathon, our sponsors have a vast range of experience and are a valuable asset to network with.</h3>-->
                 <h3>We will be releasing more sponsors as we get closer to the event! If you are interested in becoming a sponsor for HackTheMidlands 2017 then please register your interest below!</h3>
                 <div class="sponsors-list">
+                  <div class="building">
+                      <img class="cat-icon" src="./images/building.svg"/>
+                      <h2>Building Sponsor</h2>
+                      <div class="sponsor-icons">
+                          <a href="https://www.millenniumpoint.org.uk/"><img id="mp" src="./images/sponsors/mp.png"/></a>
+                      </div>
+                  </div>
                     <!--<div class="gold">-->
                         <!--<img class="cat-icon" src="./images/gold-medal.svg"/>-->
                         <!--<h2>Gold Sponsors</h2>-->
