--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
                           <a href="https://www.millenniumpoint.org.uk/"><img id="mp" src="./images/sponsors/mp.png"/></a>
                       </div>
                   </div>
-                    <!--<div class="gold">-->
-                        <!--<img class="cat-icon" src="./images/gold-medal.svg"/>-->
-                        <!--<h2>Gold Sponsors</h2>-->
-                        <!--<div class="sponsor-icons">-->
-                            <!--<a href="//bcs.org/"><img id="bcs" src="./images/sponsors/bcs.png"/></a>-->
-                        <!--</div>-->
-                    <!--</div>-->
+                    <div class="gold">
+                        <img class="cat-icon" src="./images/gold-medal.svg"/>
+                        <h2>Gold Sponsors</h2>
+                        <div class="sponsor-icons">
+                            <a href="//bcs.org/"><img id="tfwm" src="./images/sponsors/tfwm.png"/></a>
+                        </div>
+                    </div>
                     <div class="silver">
                         <img class="cat-icon" src="./images/silver-medal.svg"/>
                         <h2>Silver Sponsors</h2>
