--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
                         <div class="sponsor-icons">
                             <a href="//jetbrains.com"><img src="./images/sponsors/jetbrains.png"/></a>
                         </div>
+                        <div class="sponsor-icons">
+                            <a href="//discordapp.com"><img src="./images/sponsors/discord.png"/></a>
+                        </div>
                     </div>
                 </div>
                 <a href="sponsorship.pdf"><button>Become A Sponsor!</button></a>
