Ticket link live

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
-            <a href="http://eepurl.com/cIZiFf">Pre-Register</a>
+            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-20-tickets-36461858400">Get Tickets</a>
             <!--<a href="event-info.html">Event Information</a>-->
         </div>
       </div>
@@ -62,7 +62,7 @@
                             <a href="#event-info">About Us</a>
                             <a href="#sponsors">Sponsors</a>
                             <a href="#team">Team</a>
-                            <a href="http://eepurl.com/cIZiFf">Pre-Register</a>
+                            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-20-tickets-36461858400">Get Tickets</a>
                             <!--<a href="event-info.html">Event Information</a>-->
                             <div class="nav-mobile"></div>
                         </div>
@@ -71,13 +71,13 @@
             <div class="header-content">
                 <h1>Are you ready to <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands?</span></span></h1>
                 <h3>23<sup>rd</sup> - 24<sup>th</sup> September</h3>
-                <a href="http://eepurl.com/cIZiFf"><button id="apply-button">Register Interest</button></a>
+                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-20-tickets-36461858400"><button id="apply-button">Get Tickets</button></a>
                 <a href="sponsorship.pdf"><button id="sponsor-button">Sponsor Us</button></a>
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
             <div class="social-links-header">
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands/"><img id="facebook" src="images/facebook.svg"/></a>
-                <a target="_blank" href="http://eepurl.com/cIZiFf"><img src="images/event-brite.png"/></a>
+                <a target="_blank" href="https://www.eventbrite.co.uk/e/hackthemidlands-20-tickets-36461858400"><img src="images/event-brite.png"/></a>
             </div>
         </section>
         <section id="event-countdown">
