--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             <div class="header-content">
-                <h1>Are you ready to <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands?</span></span></h1>
+                <h1>Are you ready to <br/><span class="header-title"><span>Hack </span><span>The </span><span>Midlands? </span></span></h1>
                 <h3>23<sup>rd</sup> - 24<sup>th</sup> September</h3>
                 <a href="https://www.eventbrite.co.uk/e/hackthemidlands-20-tickets-36461858400"><button id="apply-button">Get Tickets</button></a>
                 <a href="sponsorship.pdf"><button id="sponsor-button">Sponsor Us</button></a>
@@ -242,7 +242,15 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="team-grid team-member">
+                        <div class="team-member__picture" id="team-cat"></div>
+                        <div class="team-member__text">
+                            <div class="team-member__text__content">
+                                <h3>Cathryn Dunicliff</h3>
+                                <h5>Child Protection Officer</h5>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="team-slit-bottom"></div>
