--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
                         <img class="cat-icon" src="./images/gold-medal.svg"/>
                         <h2>Gold Sponsors</h2>
                         <div class="sponsor-icons">
-                            <a href="//bcs.org/"><img id="tfwm" src="./images/sponsors/tfwm.png"/></a>
+                            <a href="//tfwm.org.uk//"><img id="tfwm" src="./images/sponsors/tfwm.png"/></a>
+                        </div>
+						<div class="sponsor-icons">
+                            <a href="//bcs.org/"><img id="bcs" src="./images/sponsors/bcs.png"/></a>
                         </div>
                     </div>
                     <div class="silver">
@@ -168,6 +171,9 @@
                         <!--<div class="sponsor-icons" style="width: 40%">-->
                             <!--<a href="//majestic.com/"><img src="./images/sponsors/majestic.png"/></a>-->
                         <!--</div>-->
+						<div class="sponsor-icons">
+                            <a href="//nexmo.com/"><img src="./images/sponsors/nexmo.png"/></a>
+                        </div>
                         <div class="sponsor-icons">
                             <a href="//elifesciences.org"><img src="./images/sponsors/elife.png"/></a>
                         </div>
@@ -175,11 +181,13 @@
                             <a href="//algolia.com"><img src="./images/sponsors/algolia.svg"/></a>
                         </div>
                     </div>
-                    <!--<div class="bronze">-->
-                        <!--<img class="cat-icon" src="./images/bronze-medal.svg"/>-->
-                        <!--<h2>Bronze Sponsors</h2>-->
-                        <!--<h3>More coming soon!</h3>-->
-                    <!--</div>-->
+                    <div class="bronze">
+                        <img class="cat-icon" src="./images/bronze-medal.svg"/>
+                        <h2>Bronze Sponsors</h2>
+						<div class="sponsor-icons">
+                            <a href="//cssbham.co.uk"><img src="./images/sponsors/css.png"/></a>
+                        </div>
+                    </div>
                     <div class="partner">
                         <img class="cat-icon" src="./images/deal.svg"/>
                         <h2>Partners</h2>
@@ -189,10 +197,10 @@
                         <div class="sponsor-icons">
                             <a href="//cycle.io"><img src="./images/sponsors/cycle.svg"/></a>
                         </div>
-			<div class="sponsor-icons">
+		        	<div class="sponsor-icons">
                             <a href="//bostonteaparty.co.uk/"><img src="./images/sponsors/btp.png"/></a>
                         </div>
-			<div class="sponsor-icons">
+		        	<div class="sponsor-icons">
                             <a href="//cs.bham.ac.uk"><img src="./images/sponsors/socs.png"/></a>
                         </div>
                         <div class="sponsor-icons">
@@ -216,20 +224,20 @@
                 </div>
                 <div class="team-grid-container">
                     <div class="team-grid team-member">
-                        <div class="team-member__picture" id="t2"></div>
-                        <div class="team-member__text">
-                            <div class="team-member__text__content">
-                                <h3>Tom Goodman</h3>
-                                <h5>Lead Organiser</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="team-grid team-member">
                         <div class="team-member__picture" id="t5"></div>
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Alex Wiley</h3>
                                 <h5>BCU Computer Science Society Web Dev</h5>
+                            </div>
+                        </div>
+                    </div>
+					<div class="team-grid team-member">
+                        <div class="team-member__picture" id="t2"></div>
+                        <div class="team-member__text">
+                            <div class="team-member__text__content">
+                                <h3>Tom Goodman</h3>
+                                <h5>Lead Organiser</h5>
                             </div>
                         </div>
                     </div>
