--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <img class="cat-icon" src="./images/bronze-medal.svg"/>
                         <h2>Bronze Sponsors</h2>
 						<div class="sponsor-icons">
-                            <a href="//cssbham.co.uk"><img src="./images/sponsors/css.png"/></a>
+                            <a href="//cssbham.com"><img src="./images/sponsors/css.png"/></a>
                         </div>
                     </div>
                     <div class="partner">
