--- a/index.html
+++ b/index.html
@@ -200,14 +200,17 @@
 		        	<div class="sponsor-icons">
                             <a href="//bostonteaparty.co.uk/"><img src="./images/sponsors/btp.png"/></a>
                         </div>
-		        	<div class="sponsor-icons">
-                            <a href="//cs.bham.ac.uk"><img src="./images/sponsors/socs.png"/></a>
+					<div class="sponsor-icons">
+                            <a href="//trello.com"><img src="./images/sponsors/trello.png"/></a>
                         </div>
                         <div class="sponsor-icons">
                             <a href="//jetbrains.com"><img src="./images/sponsors/jetbrains.png"/></a>
                         </div>
                         <div class="sponsor-icons">
                             <a href="//discordapp.com"><img src="./images/sponsors/discord.png"/></a>
+                        </div>
+						<div class="sponsor-icons">
+                            <a href="//cs.bham.ac.uk"><img src="./images/sponsors/socs.png"/></a>
                         </div>
                     </div>
                 </div>
