few changes/fixes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
                 <h3>Join Us!</h3>
                 <p>Get your tickets now for HackTheMidlands and be guaranteed a spot in this year's hackathon!</p>
-                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-tickets-27322918585"><button>Get Tickets</button></a>
+                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-20-tickets-36461858400"><button>Get Tickets</button></a>
             </div>
             <div class="google-maps">
                 <div id="faq-slit-bottom"></div>
@@ -145,8 +145,7 @@
             <div class="container">
                 <h2>Our Sponsors</h2>
                 <hr/>
-                <!--<h3>Without the help of our sponsors HackTheMidlands simply would not be possible. Alongside helping sponsor this hackathon, our sponsors have a vast range of experience and are a valuable asset to network with.</h3>-->
-                <h3>We will be releasing more sponsors as we get closer to the event! If you are interested in becoming a sponsor for HackTheMidlands 2017 then please register your interest below!</h3>
+                <h3>Without the help of our sponsors HackTheMidlands simply would not be possible. Our sponsors are wonderful, have loads of experience and are here to help! We will be releasing more sponsors as we get closer to the event, and if you're interested in becoming a sponsor for HackTheMidlands 2017 then please register your interest below!</h3>
                 <div class="sponsors-list">
                   <div class="building">
                       <img class="cat-icon" src="./images/building.svg"/>
@@ -227,20 +226,20 @@
                 </div>
                 <div class="team-grid-container">
                     <div class="team-grid team-member">
-                        <div class="team-member__picture" id="t5"></div>
-                        <div class="team-member__text">
-                            <div class="team-member__text__content">
-                                <h3>Alex Wiley</h3>
-                                <h5>BCU Computer Science Society Web Dev</h5>
-                            </div>
-                        </div>
-                    </div>
-					<div class="team-grid team-member">
                         <div class="team-member__picture" id="t2"></div>
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Tom Goodman</h3>
                                 <h5>Lead Organiser</h5>
+                            </div>
+                        </div>
+                    </div>
+					<div class="team-grid team-member">
+                        <div class="team-member__picture" id="t5"></div>
+                        <div class="team-member__text">
+                            <div class="team-member__text__content">
+                                <h3>Alex Wiley</h3>
+                                <h5>BCU Computer Science Society Web Dev</h5>
                             </div>
                         </div>
                     </div>
@@ -257,7 +256,7 @@
                         <div class="team-member__picture" id="team-cat"></div>
                         <div class="team-member__text">
                             <div class="team-member__text__content">
-                                <h3>Cathryn Dunicliff</h3>
+                                <h3>Cat Dunicliff</h3>
                                 <h5>Child Protection Officer</h5>
                             </div>
                         </div>
