added vanti & IBM

--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
 						<div class="sponsor-icons">
                             <a href="//nexmo.com/"><img src="./images/sponsors/nexmo.png"/></a>
                         </div>
+						<div class="sponsor-icons">
+                            <a href="//vanti.com/"><img src="./images/sponsors/vanti.png"/></a>
+                        </div>
                         <div class="sponsor-icons">
                             <a href="//elifesciences.org"><img src="./images/sponsors/elife.png"/></a>
                         </div>
@@ -210,6 +213,9 @@
                         </div>
 						<div class="sponsor-icons">
                             <a href="//cs.bham.ac.uk"><img src="./images/sponsors/socs.png"/></a>
+                        </div>
+						<div class="sponsor-icons">
+                            <a href="/ibm.com"><img src="./images/sponsors/ibm.png"/></a>
                         </div>
                     </div>
                 </div>
