vanti.com -> vanti.co.uk

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <a href="//nexmo.com/"><img src="./images/sponsors/nexmo.png"/></a>
                         </div>
 						<div class="sponsor-icons">
-                            <a href="//vanti.com/"><img src="./images/sponsors/vanti.png"/></a>
+                            <a href="//vanti.co.uk/"><img src="./images/sponsors/vanti.png"/></a>
                         </div>
                         <div class="sponsor-icons">
                             <a href="//elifesciences.org"><img src="./images/sponsors/elife.png"/></a>
