Added new sponsors/partners etc.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,21 @@
 						<div class="sponsor-icons">
                             <a href="//cssbham.com"><img src="./images/sponsors/css.png"/></a>
                         </div>
+					    <div class="sponsor-icons">
+						    <a href="//magic42.co.uk/"><img src="./images/sponsors/magic42.png"/></a>
+						</div>
                     </div>
+					<div class="digital">
+					    <!--<img class="cat-icon" src="./images/digital-icon.svg"/>-->
+						<h2> Digital Sponsors </h2>
+						<div class="sponsor-icons">
+                            <a href="//cs.bham.ac.uk"><img src="./images/sponsors/socs.png"/></a>
+                        </div>
+						<div class="sponsor-icons">
+                            <a href="//samsunginter.net/"><img src="./images/sponsors/samsunginternet.png"/></a>
+                        </div>
+						<br>
+					</div>
                     <div class="partner">
                         <img class="cat-icon" src="./images/deal.svg"/>
                         <h2>Partners</h2>
@@ -212,11 +226,11 @@
                             <a href="//discordapp.com"><img src="./images/sponsors/discord.png"/></a>
                         </div>
 						<div class="sponsor-icons">
-                            <a href="//cs.bham.ac.uk"><img src="./images/sponsors/socs.png"/></a>
+                            <a href="//ibm.com"><img src="./images/sponsors/ibm.png"/></a>
                         </div>
 						<div class="sponsor-icons">
-                            <a href="/ibm.com"><img src="./images/sponsors/ibm.png"/></a>
-                        </div>
+						    <a href="//themedicapp.co/"><img src="./images/sponsors/themedicapp.jpg"/></a>
+						</div>
                     </div>
                 </div>
                 <a href="sponsorship.pdf"><button>Become A Sponsor!</button></a>
