--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                     <div class="silver">
                         <img class="cat-icon" src="./images/silver-medal.svg"/>
                         <h2>Silver Sponsors</h2>
-                        <!--<div class="sponsor-icons" style="width: 40%">-->
-                            <!--<a href="//majestic.com/"><img src="./images/sponsors/majestic.png"/></a>-->
-                        <!--</div>-->
+                        <div class="sponsor-icons" style="width: 40%">
+                            <a href="//majestic.com/"><img src="./images/sponsors/majestic.png"/></a>
+                        </div>
 						<div class="sponsor-icons">
                             <a href="//nexmo.com/"><img src="./images/sponsors/nexmo.png"/></a>
                         </div>
@@ -183,16 +183,13 @@
                             <a href="//algolia.com"><img src="./images/sponsors/algolia.svg"/></a>
                         </div>
                     </div>
-                    <div class="bronze">
-                        <img class="cat-icon" src="./images/bronze-medal.svg"/>
-                        <h2>Bronze Sponsors</h2>
-						<div class="sponsor-icons">
-                            <a href="//cssbham.com"><img src="./images/sponsors/css.png"/></a>
-                        </div>
-					    <div class="sponsor-icons">
-						    <a href="//magic42.co.uk/"><img src="./images/sponsors/magic42.png"/></a>
-						</div>
-                    </div>
+           <div class="bronze">
+                <img class="cat-icon" src="./images/bronze-medal.svg"/>
+                <h2>Bronze Sponsors</h2>
+					      <div class="sponsor-icons">
+                    <a href="//cssbham.com"><img src="./images/sponsors/css.png"/></a>
+                </div>
+          </div>
 					<div class="digital">
 					    <!--<img class="cat-icon" src="./images/digital-icon.svg"/>-->
 						<h2> Digital Sponsors </h2>
