added bloomberg & .tech to partners

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link type="text/css" rel="stylesheet" href="./style/css/main.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:title" content="24 Hour Hackathon in Birmingham" />
-        <meta property="og:description" content="HackTheMidlands is a 24 hour hackathon based at Millenium Point in Birmingham. With over 200 attendees, this is not an event you will want to miss!" />
+        <meta property="og:description" content="HackTheMidlands is a 24 hour hackathon based at Millenium Point in Birmingham. Whether you're a newbie or an expert, come along to learn, build and share and have a blast at the same time!" />
         <meta property="og:image" content="http://hackthemidlands.com/images/hackthemidlands-facebook.jpg" />
         <meta property="og:url" content="http://hackthemidlands.co.uk" />
 
@@ -228,6 +228,12 @@
 						<div class="sponsor-icons">
 						    <a href="//themedicapp.co/"><img src="./images/sponsors/themedicapp.jpg"/></a>
 						</div>
+            <div class="sponsor-icons">
+                <a href="//www.bloomberg.com/"><img src="./images/sponsors/bloomberg.png"/></a>
+            </div>
+            <div class="sponsor-icons">
+                <a href="#"><img src="./images/sponsors/dottech.png"/></a>
+            </div>
                     </div>
                 </div>
                 <a href="sponsorship.pdf"><button>Become A Sponsor!</button></a>
