Removed bosted tea party

--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
                         <div class="sponsor-icons">
                             <a href="//cycle.io"><img src="./images/sponsors/cycle.svg"/></a>
                         </div>
-		        	<div class="sponsor-icons">
-                            <a href="//bostonteaparty.co.uk/"><img src="./images/sponsors/btp.png"/></a>
-                        </div>
+		        	<!--<div class="sponsor-icons">-->
+                            <!--<a href="//bostonteaparty.co.uk/"><img src="./images/sponsors/btp.png"/></a>-->
+                        <!--</div>-->
 					<div class="sponsor-icons">
                             <a href="//trello.com"><img src="./images/sponsors/trello.png"/></a>
                         </div>
