Added event info link to mobile menu

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
+            <a href="http://info.hackthemidlands.com">Event Info</a>
             <a href="https://www.eventbrite.co.uk/e/hackthemidlands-20-tickets-36461858400">Get Tickets</a>
             <!--<a href="event-info.html">Event Information</a>-->
         </div>
