--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </div>
                 <div class="team-grid-container">
                     <div class="team-grid team-member">
-                        <div class="team-member__picture" id="t2"></div>
+                        <div class="team-member__picture" id="team-tom"></div>
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Tom Goodman</h3>
@@ -260,7 +260,7 @@
                         </div>
                     </div>
                     <div class="team-grid team-member">
-                        <div class="team-member__picture" id="t7"></div>
+                        <div class="team-member__picture" id="team-liam"></div>
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Liam Sorta</h3>
@@ -274,6 +274,24 @@
                             <div class="team-member__text__content">
                                 <h3>Cat Dunicliff</h3>
                                 <h5>Child Protection Officer</h5>
+                            </div>
+                        </div>
+                    </div>
+			                    <div class="team-grid team-member">
+                        <div class="team-member__picture" id="team-helena"></div>
+                        <div class="team-member__text">
+                            <div class="team-member__text__content">
+                                <h3>Helena Bower</h3>
+                                <h5>Publicity Officer</h5>
+                            </div>
+                        </div>
+                    </div>
+			                    <div class="team-grid team-member">
+                        <div class="team-member__picture" id="team-hugh"></div>
+                        <div class="team-member__text">
+                            <div class="team-member__text__content">
+                                <h3>Hugh Wells</h3>
+                                <h5>Website & Networking</h5>
                             </div>
                         </div>
                     </div>
