--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
               margin-left: 20px;
             }
         </style>
-    </head>
-
+	</head>
+	
     <body>
       <div class="nav-mobile-content-container">
         <div id="mobile-close">
@@ -300,5 +300,6 @@
             myVideo.play();
         </script>
       <script src="./js/clock.js"></script>
+    <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/eu-2019/events?utm_source=eu-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season" style="width:100%"></a>
     </body>
 </html>
